--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "nodemon": "^2.0.7",
     "pg": "^8.5.1",
     "sequelize": "^6.5.1",
-    "sequelize-cli": "^6.2.0"
+    "sequelize-cli": "^6.2.0",
+    "socket.io": "^2.3.0"
   }
 }
